examen/create_a_network_policy/second.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
  namespace: default
  # only allow from busy box secure ns
spec:
  podSelector:
    matchLabels:
      app: web
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          type: secure
      podSelector:
        matchLabels:
          type: monitoring
